# rusty-timer

./: .gitignore  .prettierignore  .travis.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  rustfmt.toml
apps/receiver-ui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
crates/emulator/: Cargo.toml  README.md
crates/emulator-v2/: Cargo.toml  README.md
crates/emulator-v2/src/: faults.rs  lib.rs  scenario.rs
crates/emulator-v2/tests/: fault_injection.rs  multi_reader.rs
crates/emulator/src/: control_handler.rs  faults.rs  lib.rs  read_gen.rs  scenario.rs  server.rs
crates/emulator/tests/: control_integration.rs  fault_injection.rs  multi_reader.rs
crates/rt-eink/: Cargo.toml
crates/rt-eink/examples/: eink_sim.rs
crates/rt-eink/src/: driver.rs  layout.rs  lib.rs  render.rs  state.rs  task.rs
crates/rt-test-utils/: Cargo.toml  README.md
crates/rt-test-utils/src/: lib.rs  mock_ws_client.rs  mock_ws_server.rs
crates/rt-updater/: Cargo.toml  README.md
crates/rt-updater/src/: lib.rs  workflow.rs
crates/timer-core/: Cargo.toml  README.md  test_assets
crates/timer-core/src/: lib.rs
services/emulator/: Cargo.toml  README.md
services/emulator/src/: lib.rs  main.rs
services/forwarder/: Cargo.toml  Dockerfile  README.md  build.rs
services/forwarder/src/: config.rs  discovery.rs  lib.rs  local_fanout.rs  main.rs  pisugar_client.rs  reader_control.rs  reader_task.rs  replay.rs  status_http.rs  ui_events.rs  ui_server.rs  uplink.rs  uplink_replay.rs  uplink_task.rs  ups_task.rs
services/forwarder/tests/: config_endpoints.rs  config_load.rs  discovery_range.rs  event_id.rs  health_endpoints.rs  journal_pruning.rs  local_fanout.rs  power_loss_recovery.rs  replay_resume.rs  replay_send_decision.rs  storage_durability.rs  ui_embed_fallback.rs  uplink_ack.rs
services/receiver/: Cargo.toml  README.md  build.rs
services/receiver/src/: cache.rs  control_api.rs  db.rs  dbf_writer.rs  error.rs  lib.rs  local_proxy.rs  main.rs  ports.rs  runtime.rs  session.rs  sse.rs  ui_events.rs  ui_server.rs
services/receiver/tests/: cache_persistence.rs  control_api.rs  local_proxy.rs  port_mapping.rs  session_loop.rs  session_resume.rs  storage_cache.rs  ui_embed_fallback.rs  ui_fallback.rs  ws_connect_auth.rs
services/server/: Cargo.toml  Dockerfile  README.md
services/server/.sqlx/: query-003a1802215654e65b556aaa62a4033182597f3565386b4d6bf7ad8bbc9d53ab.json  query-0929e590dbeac5507e8cee8c24ec24b3843cbba4aec8ac76f07e40eb1c45a46d.json  query-0e764193e57951608062364f7529bb05ccdab09dde7489649c4ce36052ff1899.json  query-1d1d85c25eda4f9ac98aa908fa409aac5eb470a81bcd2aff182d9caa77614cd0.json  query-1dcd35938fb7763514572e690204ee47b4ed8cea4f6c7838612b6bf5898de317.json  query-25a2357ee72bc1b4e7fb76de6fc0216827506cabfedc2c083a077ed530f66115.json  query-2ee6f186c786ade72fa1a51ab5de3929cd44c6db5384dc3cb8e94dbfa743e1b8.json  query-3447b9a42e17797cfc8008dfc777a5d5666b6b0cbb6e404b5333c306dcd41bb9.json  query-39b35d7426938edfd5c9cb23032ef00ff634a939031bb06a627bc52ecd9eb0eb.json  query-3eddb356d5aa26860b47c47b1875ef5d99c545090b9f9d968a24c30e6474ffe3.json  query-40bb03cd1c08d981d588be296048ebc39504342acf583785d3d8070f69ee58c8.json  query-436aea1fb11d4fc8b091204e95aaa772a2d47374264d35501ab048bfc5dd86a0.json  query-446f467ff36092820f767774ac440fa4752da828a4897095a9f68a38936531be.json  query-531b853e3eb434748648777abb01b4614239df6fd02082f0d7f326fb1ad347c6.json  query-53d7a61f737e67ee40f76628d24077e226d45fe1fe62dcb1d445970f1a104d33.json  query-5f8dcf452a81463a370f4cc12005696dea54b80381f0278bf05062bb55d16e2f.json  query-688af39ed84ec579cc19489f37e6d1468bd0404a6210a8d2f6b5b3b8fe241ed4.json  query-6e9e83920e4eac9567226d083f69f135190bc8dbe35bca2a72f77c25cc3bc719.json  query-781a00bde9fd3958b24aa0be2526546f89db3b9294612f2debea099eaf7dfc41.json  query-7a366f12f5e9f7e2a505bd38d8fc51a5116ae651876183183b3f530f344a740f.json  query-82109dcd2e3c13aba245028f860d17f88ea5337e6834effe63962c20677c14dc.json  query-879eb5663f85d3b26ef6e11d2aa033b1cf46a8b4a2cdcb717c0423df8dc43950.json  query-8b3d795ff20e115fd518100d910f0c0d4c8167a44d8cfebf739a365226ca6865.json  query-9228d1a3eeed398a57b12db8815fbbee78ca5bcddc0cc6c909af23ab2c05b2d8.json  query-9590b1959247696477507544807e217be36cb93c9d0bb7d2e2d1746caff98bb8.json  query-a2c858fb10b30ef7cb6c566c7241a98604f362d38b5a511611d8c944e131e859.json  query-a6ced41f3e2e1c7446830575076d165b7ecce99cf09a608340080a56d3d3cb75.json  query-a705c856caf72c76c052809b94b31c87aa29cbb57ff968eff2e458469a8aacd9.json  query-aaa71baaf26dbecb7b4609e99454f39f28f19ad0e800d8e09489448dc1b06101.json  query-ae7b42c6e0fa7e38879f64dcce39495e0e3e4a5d71c1ca089c7f1ba628f84ca8.json  query-b01e9451939f882c6effb9b68df288bfa7c51e6a7ecd70ec61dea02cfb59716e.json  query-b3392b367b85e2e74fbe71260d0af70ea6f0b3d4d02a5783c687b07c4912da4b.json  query-c0593ce8a8409fcdf136de837f7d8806340871eb6d0c398696b46a71ab2c3668.json  query-cba56b10563be3a785ebf1ad59a37f3d5edfe135738d9bb3515ede8a640dde78.json  query-cfb0cfb058ef22b531c2b8c8aab3f6a8c9707e5bf0b0d6e1d45144d7d29f57b6.json  query-df0318e25e4209dc8330b56647acd84851cf259802469ba79a994749a2040f0f.json  query-e3c1a56a920cb3e6eca74dbda2bc8e8a62f93016e1132923e9b2aff11faee2f6.json  query-e771bd7fe05765a44d3db9b72fb3aaedfb6bfe44dc54ac9bef1190f4efcb6284.json  query-e908a91e60bca50730cc3ac6e5aaf2f7ad2402bb7329fe406fbb26d06133da71.json  query-ec670708cc95c50a0586ed372ea4ecb65b91cd6589d08cd466ff3a31a6232479.json  (+3 more)
services/server/migrations/: 0001_init.sql  0002_epoch_metrics.sql  0003_events_epoch_tag_index.sql  0004_forwarder_display_name.sql  0005_races_participants_chips.sql  0006_forwarder_races_and_last_read.sql  0007_stream_epoch_races_and_receiver_epoch_cursors.sql  0008_stream_epoch_metadata.sql  0009_announcer_config.sql  0010_reader_connected.sql  0011_forwarder_ups_events.sql
services/server/src/: announcer.rs  auth.rs  dashboard_events.rs  db.rs  forwarder_proxy.rs  lib.rs  main.rs  state.rs  ws_common.rs  ws_forwarder.rs  ws_receiver.rs
services/streamer/: Cargo.toml  README.md
services/streamer/src/: lib.rs  (+1 more)
(+632 files in other folders)
