[workspace]
members = [
    ".",
    "crates/ipico-core",
    "crates/rt-protocol",
    "crates/rt-test-utils",
    "services/forwarder",
    "services/server",
    "services/receiver",
]
resolver = "2"

[package]
name = "rusty-timer"
version = "1.0.0"
authors = ["iwismer <isaac@iwismer.ca>"]
edition = "2021"
homepage = "https://github.com/iwismer/rusty-timer"

[dependencies]
clap = "4"
chrono = "0.4"
encoding = "0.2"
futures = "0.3"
ipico-core = { path = "crates/ipico-core" }
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "streamer"
path = "src/streamer.rs"

[[bin]]
name = "emulator"
path = "src/emulator.rs"
