[workspace]
members = [
    ".",
    "crates/emulator-v2",
    "crates/ipico-core",
    "crates/rt-protocol",
    "crates/rt-test-utils",
    "services/forwarder",
    "services/server",
    "services/receiver",
]
resolver = "2"

[package]
name = "rusty-timer"
version = "1.0.0"
authors = ["iwismer <isaac@iwismer.ca>"]
edition = "2021"
homepage = "https://github.com/iwismer/rusty-timer"

[dependencies]
clap = "4"
chrono = "0.4"
encoding = "0.2"
futures = "0.3"
ipico-core = { path = "crates/ipico-core" }
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "streamer"
path = "src/streamer.rs"

[[bin]]
name = "emulator"
path = "src/emulator.rs"

# ---------------------------------------------------------------------------
# Integration test suites (Task 20-21)
# ---------------------------------------------------------------------------

[[test]]
name = "e2e_forwarder_server_receiver"
path = "tests/integration/e2e_forwarder_server_receiver.rs"

[[test]]
name = "e2e_replay_resume"
path = "tests/integration/e2e_replay_resume.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
sqlx = { version = "0.9.0-alpha.1", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "macros", "chrono", "uuid"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
rt-protocol = { path = "crates/rt-protocol" }
rt-test-utils = { path = "crates/rt-test-utils" }
server = { path = "services/server" }
receiver = { path = "services/receiver" }
tempfile = "3"
axum = { version = "0.7", features = ["ws"] }
