[workspace]
members = [
    ".",
    "crates/emulator-v2",
    "crates/ipico-core",
    "crates/rt-protocol",
    "crates/rt-test-utils",
    "crates/timer-core",
    "services/forwarder",
    "services/server",
    "services/receiver",
    "services/streamer",
    "services/emulator",
]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# These are commonly too noisy in this codebase — suppress
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[package]
name = "rusty-timer"
version = "1.0.0"
authors = ["iwismer <isaac@iwismer.ca>"]
edition = "2021"
homepage = "https://github.com/iwismer/rusty-timer"

[lib]
name = "rusty_timer"
path = "src/lib.rs"

# ---------------------------------------------------------------------------
# Integration test suites (Task 20-21)
# ---------------------------------------------------------------------------

[[test]]
name = "e2e_forwarder_server_receiver"
path = "tests/integration/e2e_forwarder_server_receiver.rs"

[[test]]
name = "e2e_replay_resume"
path = "tests/integration/e2e_replay_resume.rs"

[[test]]
name = "chaos_network"
path = "tests/integration/chaos_network.rs"

[[test]]
name = "power_loss_forwarder"
path = "tests/integration/power_loss_forwarder.rs"

[[test]]
name = "server_restart"
path = "tests/integration/server_restart.rs"

[[test]]
name = "disk_watermark_prune"
path = "tests/integration/disk_watermark_prune.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.37", features = ["bundled"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
sqlx = { version = "0.9.0-alpha.1", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "macros", "chrono", "uuid"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
rt-protocol = { path = "crates/rt-protocol" }
rt-test-utils = { path = "crates/rt-test-utils" }
server = { path = "services/server" }
receiver = { path = "services/receiver" }
tempfile = "3"
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
forwarder = { path = "services/forwarder" }
serde_json = "1"
