[package]
name = "rt-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
rt-protocol = { path = "../rt-protocol" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
serde_json = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
