[package]
name = "emulator"
version = "1.0.2"
edition = "2021"
authors = ["iwismer <isaac@iwismer.ca>"]

[[bin]]
name = "emulator"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
emulator = { package = "rt-emulator", path = "../../crates/emulator" }
