[package]
name = "forwarder"
version = "0.1.0"
edition = "2021"

[features]
embed-ui = ["dep:rust-embed", "dep:mime_guess"]

[lib]
name = "forwarder"
path = "src/lib.rs"

[[bin]]
name = "forwarder"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
rt-protocol = { path = "../../crates/rt-protocol" }
rt-updater = { path = "../../crates/rt-updater" }
ipico-core = { path = "../../crates/ipico-core" }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"
reqwest = "0.12"
rt-test-utils = { path = "../../crates/rt-test-utils" }
tokio = { version = "1", features = ["full"] }
