[package]
name = "forwarder"
version = "0.3.1"
edition = "2024"

[features]
embed-ui = ["dep:rust-embed", "rt-ui-http/embed-ui"]

[lib]
name = "forwarder"
path = "src/lib.rs"

[[bin]]
name = "forwarder"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
reqwest = "0.12"
rt-protocol = { path = "../../crates/rt-protocol" }
rt-ui-log = { path = "../../crates/rt-ui-log" }
rt-ui-http = { path = "../../crates/rt-ui-http" }
rt-updater = { path = "../../crates/rt-updater" }
ipico-core = { path = "../../crates/ipico-core" }
rust-embed = { version = "8", optional = true }

[dev-dependencies]
tempfile = "3"
rt-test-utils = { path = "../../crates/rt-test-utils" }
tokio = { version = "1", features = ["full"] }
