[package]
name = "forwarder"
version = "0.8.3"
edition = "2024"

[features]
embed-ui = ["dep:rust-embed", "rt-ui-http/embed-ui"]

[lib]
name = "forwarder"
path = "src/lib.rs"

[[bin]]
name = "forwarder"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rt-protocol = { path = "../../crates/rt-protocol" }
rt-ui-log = { path = "../../crates/rt-ui-log" }
rt-ui-http = { path = "../../crates/rt-ui-http" }
rt-updater = { path = "../../crates/rt-updater" }
ipico-core = { path = "../../crates/ipico-core" }
async-stream = "0.3"
rust-embed = { version = "8", optional = true }

[dev-dependencies]
tempfile = "3"
ipico-core = { path = "../../crates/ipico-core", features = ["test-support"] }
rt-test-utils = { path = "../../crates/rt-test-utils" }
tokio = { version = "1", features = ["full", "test-util"] }
