[package]
name = "receiver"
version = "0.1.1"
edition = "2021"

[features]
embed-ui = ["dep:rust-embed", "dep:mime_guess"]

[lib]
name = "receiver"
path = "src/lib.rs"

[[bin]]
name = "receiver"
path = "src/main.rs"

[dependencies]
rt-protocol = { path = "../../crates/rt-protocol" }
rt-ui-log = { path = "../../crates/rt-ui-log" }
rt-updater = { path = "../../crates/rt-updater" }
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
thiserror = "2"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"
rt-test-utils = { path = "../../crates/rt-test-utils" }
tokio = { version = "1", features = ["full", "test-util"] }
axum = { version = "0.8", features = ["ws"] }
http-body-util = "0.1"
