[package]
name = "receiver"
version = "0.14.0"
edition = "2024"

[lib]
name = "receiver"
path = "src/lib.rs"

[dependencies]
rt-protocol = { path = "../../crates/rt-protocol" }
rt-ui-log = { path = "../../crates/rt-ui-log" }
rt-updater = { path = "../../crates/rt-updater" }
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
thiserror = "2"
dirs = "6"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
getrandom = "0.4"
ipico-core = { path = "../../crates/ipico-core" }
dbase = { version = "0.7", features = ["serde", "yore"] }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.37", features = ["bundled"] }
rt-test-utils = { path = "../../crates/rt-test-utils" }
tokio = { version = "1", features = ["full", "test-util"] }
axum = { version = "0.8", features = ["ws"] }
http-body-util = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
