[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
sqlx = { version = "0.9.0-alpha.1", default-features = false, features = ["runtime-tokio","postgres","migrate","macros","chrono","uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rt-protocol = { path = "../../crates/rt-protocol" }
futures-util = "0.3"
tokio-tungstenite = "0.26"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
rt-test-utils = { path = "../../crates/rt-test-utils" }
sha2 = "0.10"
sqlx = { version = "0.9.0-alpha.1", default-features = false, features = ["runtime-tokio","postgres","migrate","macros","chrono","uuid"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
